# hyperloglogplus

./: .gitignore  .travis.yml  LICENSE  README.md  hyperloglogplus.cabal  stack.yaml
benchmark/: Main.hs
benchmark/Data/HyperLogLogPlus/: Benchmarks.hs
src/Data/: HyperLogLogPlus.hs
src/Data/HyperLogLogPlus/: Config.hs  Type.hs
test/: Main.hs
test/Data/HyperLogLogPlus/: Tests.hs
